--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,8 +1,5 @@
 [workspace]
-resolver = "2"
-
-members = ["aoc*"]
-default-members = ["aoc*"]
+members = ["abc*"]
 
 [workspace.dependencies]
-# proconio = { version = "0.4.5", features = ["derive"] }
+proconio = { version = "0.4.5", features = ["derive"] }
